<resources>
    <string name="app_name">E-car Track</string>
    <string name="home_page">Home</string>
    <string name="search_page">Search</string>
    <string name="fav_page">Favourite</string>
    <string name="notificate">Notification</string>
    <string name="profile_page">Profile</string>
    <string name="station_detail">Station Detail</string>
    <string name="pending">Pending</string>
    <string name="back">Back</string>
    <string name="Maps">Maps</string>
    <string name="user_info">User Information</string>
    <string name="gender">Gender</string>
    <string name="cartype">Car Type</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="r_pw">Re-enter Password</string>
    <string name="stationname">Station Name</string>
    <string name="s_status">Status</string>
    <string name="s_address">Address</string>
    <string name="s_distance">Distance</string>
    <string name="title_activity_favorite" />
    <string name="title_activity_favorite_page" />
</resources>